
[project]
name = "dagster-ray"
urls = { repository = "https://github.com/danielgafni/dagster-ray" }
description = "Dagster integration library for Ray"
authors = [
    {name = "Daniel Gafni", email = "danielgafni16@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8.1"
readme = "README.md"
keywords = [
    "dagster",
    "ray",
    "ETL",
    "distributed",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dagster>=1.8.0",
    "tenacity>=8.0.0",
]

dynamic = ["version"]

[project.optional-dependencies]
run_launcher = [
    "ray[client]"
]
executor = [
    "ray[client]"
]
pipes = [
    "ray[client]"
]
kuberay = [
    "pyyaml",
    "kubernetes>=20.0.0",
    "dagster-k8s>=0.19.0",
    "pyyaml>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "hypothesis<7.0.0,>=6.77.0",
    "pytest<8.0.0,>=7.3.1",
    "ruff<1.0.0,>=0.3.0",
    "pyright<2.0.0,>=1.1.313",
    "pre-commit>=3.3.2,<4.0.0",
    "dagit<2.0.0,>=1.3.9",
    "pytest-cases<4.0.0,>=3.6.14",
    "pytest-kubernetes<1.0.0,>=0.3.1",
    "blacken-docs<2.0.0,>=1.16.0",
    "ray[default,data]>=2.7.0",
    "hatch>=1.12.0",
    "dunamai>=1.22.0",
    "pip>=24.2",
    "ipython>=8.12.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dagster_ray/_version.py"

[tool.pytest.ini_options]
addopts = "-vvv --capture=no --log-disable=faker"
log_cli = true
log_level = "INFO"

[tool.ruff]
line-length = 120
src = [
    "dagster_ray",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint]
extend-select = ["I", "TID252", "TID253"]
[tool.ruff.lint.isort]
known-first-party = ["dagster_ray", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
banned-module-level-imports = ["ray", "kubernetes", "torch"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_ray",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
